--- a/Aerok/css/layout.css
+++ b/Aerok/css/layout.css
@@ -54,13 +54,14 @@ header .gnb .m_lang {
 
 header .tnb {
     display: flex;
+    height:100%
 }
 header .tnb .lang, .menu {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 2.11rem;
-    height: 80px;
+    height: 100%;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
