--- a/Aerok/css/layout.css
+++ b/Aerok/css/layout.css
@@ -24,6 +24,8 @@ header .logo a {
     line-height: 0;
     background: url(../images/popup/Aero_K_logo\ b.svg) no-repeat center center / contain;
 }
+
+/* gnb 영역*/
 header .gnb .gnb_wrap ul.depth1 {
     display: flex;
 }
@@ -34,9 +36,20 @@ header .gnb .gnb_wrap ul.depth1 > li > a {
     width: 7.75rem;
     height: 80px;
 }
+header .gnb .gnb_wrap ul.depth1 > li > a > span {
+    border-bottom: 1px solid rgba(0, 0, 0, 0);
+}
 header .gnb .gnb_wrap ul.depth1 > li > a:hover > span {
     border-bottom: 1px solid var(--secondary-color);
 }
+
+
+@media screen and (max-width:1024px){
+    header .gnb .gnb_wrap ul.depth1 > li > a:hover > span {
+        border-bottom: 1px solid rgba(0, 0, 0, 0);
+    }
+}
+
 header .gnb .gnb_wrap ul.depth1 > li > ul.depth2 {
     display: none;
 }
@@ -47,41 +60,43 @@ header .gnb .gnb_close {
     display: none;
 }
 
-/* 모바일 */
-header .gnb .m_lang {
-    display: none;
-}
-
+/* tnb 영역*/
 header .tnb {
     display: flex;
     height:100%
 }
-header .tnb .lang, .menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 2.11rem;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: contain;
-}
-header .tnb .lang button {
+
+header .tnb .lang .ko {
     position: relative;
+    height: 100%;
+}
+header .tnb .lang .ko a {
+    display: flex;
+    align-items: center;
+    padding-right: 30px;
+    height: 100%;
+    font-size: var(--body-L);
+}
+header .tnb .lang .ko::after {
+    position: absolute;
+    content: "";
+    top: 34%;
+    right: 0;
     width: 1.41rem;
     height: 1.41rem;
-    font-size: 0;
-    line-height: 0;
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 21.5C10.6975 21.5 9.46833 21.2503 8.3125 20.751C7.15667 20.2517 6.14867 19.5718 5.2885 18.7115C4.42817 17.8513 3.74833 16.8433 3.249 15.6875C2.74967 14.5317 2.5 13.3025 2.5 12C2.5 10.6872 2.74967 9.45542 3.249 8.30475C3.74833 7.15408 4.42817 6.14867 5.2885 5.2885C6.14867 4.42817 7.15667 3.74833 8.3125 3.249C9.46833 2.74967 10.6975 2.5 12 2.5C13.3128 2.5 14.5446 2.74967 15.6953 3.249C16.8459 3.74833 17.8513 4.42817 18.7115 5.2885C19.5718 6.14867 20.2517 7.15408 20.751 8.30475C21.2503 9.45542 21.5 10.6872 21.5 12C21.5 13.3025 21.2503 14.5317 20.751 15.6875C20.2517 16.8433 19.5718 17.8513 18.7115 18.7115C17.8513 19.5718 16.8459 20.2517 15.6953 20.751C14.5446 21.2503 13.3128 21.5 12 21.5ZM12 19.9788C12.5103 19.3019 12.9398 18.6192 13.2885 17.9307C13.6372 17.2422 13.9212 16.4897 14.1405 15.673H9.8595C10.0917 16.5153 10.3789 17.2808 10.7213 17.9693C11.0634 18.6578 11.4897 19.3276 12 19.9788ZM10.0635 19.7038C9.68017 19.1538 9.33592 18.5285 9.03075 17.828C8.72558 17.1273 8.48842 16.409 8.31925 15.673H4.927C5.45517 16.7115 6.1635 17.584 7.052 18.2905C7.9405 18.9968 8.94433 19.4679 10.0635 19.7038ZM13.9365 19.7038C15.0557 19.4679 16.0595 18.9968 16.948 18.2905C17.8365 17.584 18.5448 16.7115 19.073 15.673H15.6807C15.4794 16.4153 15.2262 17.1368 14.921 17.8375C14.616 18.5382 14.2878 19.1603 13.9365 19.7038ZM4.298 14.173H8.0155C7.95267 13.8013 7.90708 13.4369 7.87875 13.0798C7.85058 12.7228 7.8365 12.3628 7.8365 12C7.8365 11.6372 7.85058 11.2773 7.87875 10.9202C7.90708 10.5631 7.95267 10.1987 8.0155 9.827H4.298C4.20183 10.1667 4.12817 10.5198 4.077 10.8865C4.02567 11.2532 4 11.6243 4 12C4 12.3757 4.02567 12.7468 4.077 13.1135C4.12817 13.4802 4.20183 13.8333 4.298 14.173ZM9.51525 14.173H14.4848C14.5474 13.8013 14.5929 13.4402 14.6212 13.0895C14.6494 12.7388 14.6635 12.3757 14.6635 12C14.6635 11.6243 14.6494 11.2612 14.6212 10.9105C14.5929 10.5598 14.5474 10.1987 14.4848 9.827H9.51525C9.45258 10.1987 9.40708 10.5598 9.37875 10.9105C9.35058 11.2612 9.3365 11.6243 9.3365 12C9.3365 12.3757 9.35058 12.7388 9.37875 13.0895C9.40708 13.4402 9.45258 13.8013 9.51525 14.173ZM15.9845 14.173H19.702C19.7982 13.8333 19.8718 13.4802 19.923 13.1135C19.9743 12.7468 20 12.3757 20 12C20 11.6243 19.9743 11.2532 19.923 10.8865C19.8718 10.5198 19.7982 10.1667 19.702 9.827H15.9845C16.0473 10.1987 16.0929 10.5631 16.1212 10.9202C16.1494 11.2773 16.1635 11.6372 16.1635 12C16.1635 12.3628 16.1494 12.7228 16.1212 13.0798C16.0929 13.4369 16.0473 13.8013 15.9845 14.173ZM15.6807 8.327H19.073C18.5385 7.27567 17.835 6.40317 16.9625 5.7095C16.09 5.016 15.0813 4.54167 13.9365 4.2865C14.3198 4.8685 14.6608 5.50508 14.9595 6.19625C15.2583 6.88725 15.4987 7.5975 15.6807 8.327ZM9.8595 8.327H14.1405C13.9083 7.491 13.6163 6.72075 13.2645 6.01625C12.9125 5.31175 12.491 4.64675 12 4.02125C11.509 4.64675 11.0875 5.31175 10.7355 6.01625C10.3837 6.72075 10.0917 7.491 9.8595 8.327ZM4.927 8.327H8.31925C8.50125 7.5975 8.74167 6.88725 9.0405 6.19625C9.33917 5.50508 9.68017 4.8685 10.0635 4.2865C8.91217 4.54167 7.90192 5.01767 7.03275 5.7145C6.16342 6.41117 5.4615 7.282 4.927 8.327Z' fill='%23002554'/%3E%3C/svg%3E%0A");
 }
-/* header lang 숨김*/
+
 header .tnb .lang ul {
     position: absolute;
-    top: 70px;
+    top: 60px;
+    right: 0;
     display: none;
     flex-direction: column;
     align-items: center;
-    width: 4.23rem;
+    width: auto;
+    padding: 1em 2em;
+    gap: 0.4em;
     background-color: var(--bg-color);
     border-radius: 10px;
 }
@@ -91,13 +106,6 @@ header .tnb ul li a {
 }
 header .tnb ul li.active a {
     color: var(--secondary-color);
-}
-header .tnb .menu button {
-    width: 1.41rem;
-    height: 1.41rem;
-    font-size: 0;
-    line-height: 0;
-    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 18V16H21V18H3ZM3 13V11H21V13H3ZM3 8V6H21V8H3Z' fill='%23002554'/%3E%3C/svg%3E%0A");
 }
 
 /* header over */
@@ -126,11 +134,117 @@ header .tnb .menu button {
         color: var(--secondary-color);
     }
 }
+
 @media screen and (max-width:1024px){
-    header .gnb .gnb_wrap {
+    header .gnb .gnb_wrap ul.depth1 {
+        position: absolute;
+        display: none;
+        top: var(--header-h);
+        width: 100%;
+        left: 50%;
+        height: 100dvh;
+        overflow-y: scroll;
+        flex-direction: column;
+        background-color: var(--bg-color);
+    }
+    header.mo_open .gnb .gnb_wrap ul.depth1 {
+        display: flex;
+    }
+    header .gnb .gnb_wrap ul.depth1 > li > a {
+        width: auto;
+        justify-content: normal;
+        padding: 0 2.05em;
+        color: var(--bdoy-color);
+    }
+    header .gnb .gnb_wrap ul.depth1 > li.active > a {
+        color: var(--secondary-color);
+    }
+
+    /* none flex로 보이게*/
+    header .gnb .gnb_wrap ul.depth1 > li > ul.depth2 {
+        display: none;
+        flex-direction: column;
+        font-size: var(--body-m-default);
+        font-weight: 400;
+        color: var(--bdoy-color);
+    }
+    header .gnb .gnb_wrap ul.depth1 > li > ul.depth2 > li > a {
+        display: flex;
+        align-items: center;
+        padding: 0 2.05em;
+        height: 50px;
+        background-color: var(--bg-color-2);
+    }
+    header .gnb .gnb_wrap ul.depth1 > li > ul.depth2 > li.active > a {
+        color: var(--secondary-color);
+    }
+    header .gnb .gnb_open {
+        display: block;
+        width: 2rem;
+        height: var(--header-h);
+        font-size: 0;
+        line-height: 0;
+        background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 18V16H21V18H3ZM3 13V11H21V13H3ZM3 8V6H21V8H3Z' fill='%23002554'/%3E%3C/svg%3E%0A");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+    header .gnb .gnb_close {
+        display: none;
+        width: 2rem;
+        height: var(--header-h);
+        font-size: 0;
+        line-height: 0;
+        background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.40043 18.6552L5.34668 17.6014L10.9467 12.0014L5.34668 6.40141L6.40043 5.34766L12.0004 10.9477L17.6004 5.34766L18.6542 6.40141L13.0542 12.0014L18.6542 17.6014L17.6004 18.6552L12.0004 13.0552L6.40043 18.6552Z' fill='%23002554'/%3E%3C/svg%3E%0A");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+    header .tnb {
         display: none;
     }
-    header .gnb .m_lang {
-        display: none;
+}
+
+footer {
+    padding: 2.82em 4.70em;
+    font-size: var(--body-s);
+    background-color: var(--secondary-color);
+    color: rgba(255, 255, 255, 0.8);  
+}
+footer .logo {
+    display: flex;
+    width: 6.05rem;
+    height: 21px;
+    font-size: 0;
+    line-height: 0;
+    background: url(../images/popup/Aero_K_logo_w.svg) no-repeat center center / contain;
+}
+footer .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1.41em;
+}
+footer .wrapper .infor {
+    display: flex;
+    flex-direction: column;
+    gap: 0.58em;
+}
+footer .wrapper .infor ul {
+    display: flex;
+    gap: 2em;
+}
+footer .wrapper .copyright {
+    font-size: var(--sub);
+}
+@media screen and (max-width:1164px){
+    footer {
+        padding: 2.82em 0;
+    }
+    footer .wrapper .infor {
+        gap: 1.58em;
+    }
+    footer .wrapper .infor ul {
+        flex-direction: column;
+        gap: 0.5em;
     }
 }
