--- a/Aerok/css/layout.css
+++ b/Aerok/css/layout.css
@@ -1,5 +1,23 @@
 .skipnav {
-    display: none;
+    z-index: 1000000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.skipnav a {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: var(--secondary-color);
+    color: var(--bg-color);
+    transform: translateY(-100%);
+}
+.skipnav a:focus, .skipnav a:active{
+    transform: translateY(0);
 }
 
 header {
@@ -146,6 +164,17 @@ header .tnb ul li.active a {
         overflow-y: scroll;
         flex-direction: column;
         background-color: var(--bg-color);
+    }
+    /* 모바일 오픈일때 뒤에 백그라운드 주기 */
+    header.mobile_open::after {
+        z-index: -1;
+        position: absolute;
+        content: "";
+        top: var(--header-h);
+        left: 0;
+        width: 100%;
+        height: 100dvh;
+        background: rgba(0, 0, 0, 0.4);
     }
     header.mobile_open .gnb .gnb_wrap ul.depth1 {
         display: flex;
