--- a/Aerok/css/main.css
+++ b/Aerok/css/main.css
@@ -6,11 +6,14 @@
 .visual {
     padding-top: 6.58em;
 }
+.visual h2 {
+    display: none;
+}
 .visual .wrapper {
     display: flex;
     gap: 2.82em;
 }
-.visual .swiper {
+.visual .siwper_wrap {
     width: 57.30%;
 }
 .visual .swiper ul li a {
@@ -67,7 +70,7 @@
     border: 1px solid var(--border);
     border-radius: 1.17rem;
 }
-.visual .user .title {
+.visual .user h3 {
     margin-bottom: 1.92em;
     font-size: var( --title-XL);
     font-weight: 700;
@@ -88,26 +91,17 @@
     align-items: center;
     gap: 0.58em;
 }
-.visual .user .check_group span {
+.visual .user .check_group label {
     font-size: var( --title-m);
     font-weight: 700;
     color: var(--title-color);
 }
-.visual .user .check_group [type="checkbox"] {
-    appearance: none; /* 기본(네이티브) 모양을 제거 */
-    box-sizing: border-box;
-    background-clip: content-box;
-    padding: 0.2em;
+.visual .user .check_group [type="radio"] {
     width: 1.17rem;
     height: 1.17rem;
-    border: 2px solid var(--disalbe);
-    border-radius: 50%;
-    cursor: pointer;
+    border-color: var(--disalbe);
 }
-.visual .user .check_group [type="checkbox"]:checked {
-    border-color: var( --bdoy-color);
-    background-color: var(--bdoy-color);
-}
+
 .visual .user .user_group .form_group {
     position: relative;
     display: flex;
@@ -130,6 +124,7 @@
     display: flex;
     font-size: var( --body-s);
     color: var(--disalbe);
+    margin-bottom: 0.3em;
 }
 .visual .user .form_group input {
     display: flex;
@@ -175,7 +170,7 @@
     .visual .wrapper{
         flex-direction: column;
     }
-    .visual .swiper {
+    .visual .siwper_wrap {
         width: 100%;
     }
     .visual .user {
@@ -204,14 +199,15 @@
 .travel {
     padding: 5.64em 0;
 }
-/* 탭 메뉴 */
-.travel .title {
+.travel h2 {
     margin-bottom: 1.92em;
     font-size: var( --title-XL);
     font-weight: 700;
     color: var(--title-color);
 }
-.travel .tab_menu ul {
+
+/* 탭 메뉴 */
+.travel .tab_list ul {
     display: flex;
     padding: 0.58em 0.58em;
     max-width: 11.76rem;
@@ -222,21 +218,24 @@
     color: var(--disalbe);
     background-color: var( --bg-color-2);
 }
-.travel .tab_menu ul li a {
+.travel .tab_list ul li i {
+    display: none;
+}
+.travel .tab_list ul li button {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 5.29rem;
     height: 49px;
 }
-.travel .tab_menu ul li.active a {
+.travel .tab_list ul li.active button {
     color: var( --bg-color);
     background-color: var(--secondary-color);
     border-radius: 100px;
 }
 
 /* event 팝업 */
-.travel .event_popup {
+.travel .tab_content .event_popup {
     position: relative;
     height: 200px;
     padding: 2.35em 2.82em;
@@ -246,7 +245,7 @@
     font-weight: 700;
     color: var(--bg-color);  
 }
-.travel #section2 .event_popup {
+.travel #dognum_pannel .event_popup {
     background:linear-gradient(to right, rgba(0, 37, 84, 1) 20%, rgba(0, 0, 0, 0) 60%), url(../images/popup/event_popup_02.jpg) no-repeat center center / cover;
 }
 .travel .event_popup strong {
@@ -272,75 +271,47 @@
 }
 
 /* 탭 컨텐츠 */
-.travel .tab_content section {
-    display: none;
-}
-.travel .tab_content section.active {
-    display: block;
-}
-.travel .tab_content section ul {
+.travel .tab_content .tab_conts ul {
     display: flex;
     gap: 1.41em;
-    width: 100%;
-    overflow-x: auto;
-    scrollbar-width: none;
 }
-.travel .tab_content section ul li {
-    flex: 1;
-}
-.travel .tab_content section ul li a {
+.travel .tab_content .tab_conts ul li a {
     display: flex;
     flex-direction: column;
     gap: 1.41em;
 }
-.travel .tab_content section ul li a .photo {
+.travel .tab_content .tab_conts ul li a .photo {
+    overflow: hidden;
     height: 200px;
     font-size: 0;
     line-height: 0;
-    border-radius: 0.58rem;
+    border-radius: 0.58rem
 }
-.travel .tab_content section ul li a .osaka {
-    background: url(../images/popup/event_list_banner_01.jpg)no-repeat center center / cover;
+.travel .tab_content .tab_conts ul li a .photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.travel .tab_content section ul li a .kyoto {
-    background: url(../images/popup/event_list_banner_02.jpg)no-repeat center center / cover;
-}
-.travel .tab_content section ul li a .tokyo {
-    background: url(../images/popup/event_list_banner_03.jpg)no-repeat center center / cover;
-}
-.travel .tab_content section ul li a .satporo {
-    background: url(../images/popup/event_list_banner_04.jpg)no-repeat center center / cover;
-}
-.travel .tab_content #section2 ul li a .thailand {
-    background: url(../images/popup/dongnum_list_01.jpg)no-repeat center center / cover;
-}
-.travel .tab_content #section2 ul li a .phuket {
-    background: url(../images/popup/dongnum_list_02.jpg)no-repeat center center / cover;
-}
-.travel .tab_content #section2 ul li a .chiang_mai {
-    background: url(../images/popup/dongnum_list_03.jpg)no-repeat center center / cover;
-}
-.travel .tab_content #section2 ul li a .vietnam {
-    background: url(../images/popup/dongnum_list_04.jpg)no-repeat center center / cover;
-}
-.travel .tab_content section ul li a .inner strong {
+.travel .tab_content .tab_conts ul li a .inner strong {
     display: flex;
     margin-bottom: 0.2em;
     font-size: var(--title-s);
     font-weight: 700;
     color: var(--title-color);
 }
-.travel .tab_content section ul li a .inner .date {
+.travel .tab_content .tab_conts ul li a .inner .date {
     display: flex;
     align-items: center;
     margin-bottom: 0.53em;
     font-size: var(--body-s);
+    font-weight: 400;
+    color: var( --bdoy-color);
 }
-.travel .tab_content section ul li a .inner .date .first, .end {
+.travel .tab_content .tab_conts ul li a .inner .date .first, .end {
     display: flex;
     gap: 0.53rem;
 }
-.travel .tab_content section ul li a .inner .date .icon {
+.travel .tab_content .tab_conts ul li a .inner .date .icon {
     font-size: 0;
     line-height: 0;
     width: 24px;
@@ -350,19 +321,20 @@
     background-repeat: no-repeat;
     background-size: contain;
 }
-.travel .tab_content section ul li a .inner .money {
+.travel .tab_content .tab_conts ul li a .inner .money {
     margin-bottom: 0.96em;
     font-size: var(--title-XL);
     font-weight: 700;
     color: var(--secondary-color);
 }
-.travel .tab_content section ul li a .inner .label_group {
+.travel .tab_content .tab_conts ul li a .inner .tag_group {
     display: flex;
-    gap: 0.70em;
+    gap: 0.7em;
 }
-.travel .tab_content section ul li a .inner label {
+.travel .tab_content .tab_conts ul li a .inner .tag_group span {
     padding: 0.33em 0.66em;
     font-size: var(--sub);
+    font-weight: 400;
     border: 1px solid var(--secondary-color);
     border-radius: 0.33rem;
     color: var(--secondary-color);
@@ -370,19 +342,13 @@
 }
 
 @media screen and (max-width:768px){
-    .travel .tab_content section ul::-webkit-scrollbar {
-        display: none; /* Chrome, Safari에서 스크롤바 숨기기 */
-    }
-    .travel .tab_content section ul li {
-        min-width: 33.33%; /* li 요소가 충분히 커야 스크롤 가능 */
-    }
-    .travel .tab_content section ul li a .photo {
+    .travel .tab_content .tab_conts ul li a .photo {
         height: 140px;
         border-radius: 0.48rem;
     }
 }
 @media screen and (max-width:670px){
-    .travel .tab_content section ul {
+    .travel .tab_content .tab_conts ul {
         flex-direction: column;
     }
 }
@@ -392,14 +358,14 @@
     padding: 5.64em 0;
     overflow: hidden;
 }
-.event_ticket .title {
+.event_ticket h2 {
     margin-bottom: 1.92em;
     font-size: var( --title-XL);
     font-weight: 700;
     color: var(--title-color);
 
 }
-.event_ticket .swiper {
+.event_ticket .swiper_wrap{
     width: 4129px;
 }
 .event_ticket .swiper > ul > li {
@@ -416,22 +382,16 @@
     line-height: 0;
     width: 26%;
     height: 305px;
+    overflow: hidden;
     border-radius: 0.29rem;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-.event_ticket .swiper > ul > li .gundam {
-    background-image: url(../images/popup/event_tiket_list_01.jpg);
-}
-.event_ticket .swiper > ul > li .nagoya {
-    background-image: url(../images/popup/event_tiket_list_02.jpg);
-}
-.event_ticket .swiper > ul > li .yukie {
-    background-image: url(../images/popup/event_tiket_list_03.jpg);
-}
-.event_ticket .swiper > ul > li .ora {
-    background-image: url(../images/popup/event_tiket_list_04.jpg);
+.event_ticket .swiper > ul > li .photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .event_ticket .swiper > ul > li .tiket_info {
     display: flex;
@@ -439,7 +399,7 @@
     flex: 1;
     gap: 2.82em;
 }
-.event_ticket .swiper > ul > li .tiket_info .tiket_title {
+.event_ticket .swiper > ul > li .tiket_info h3 {
     font-size: var(--title-XXL);
     font-weight: 700;
     color: var(--secondary-color);
@@ -513,7 +473,7 @@
 }
 
 @media screen and (max-width:768px){
-    .event_ticket .swiper {
+    .event_ticket .swiper_wrap{
         width: auto;
     }
     .event_ticket .swiper > ul > li {
@@ -570,7 +530,7 @@
 .help {
     padding: 5.64em 0;
 }
-.help .title {
+.help h2 {
     margin-bottom: 1.92em;
     font-size: var( --title-XL);
     font-weight: 700;
@@ -636,19 +596,27 @@
 .news {
     padding: 5.64em 0;
 }
-.news .wrapper .section {
+/* .news .wrapper .section {
     display: flex;
     overflow:hidden;
     gap: 5.64em;
     max-height:100vh;
+} */
+
+.news .inner .tit {
+    float: left;
+    width: 19.76rem;
 }
-.news .title {
+.sticky-anchor {
+    height: 0;
+}
+.news h2 {
     margin-bottom: 1.92em;
     font-size: var( --title-XL);
     font-weight: 700;
     color: var(--title-color);
 }
-.news .section .tit {
+.news .tit {
     flex: 0 0 26.06%;/* 고정된 크기 */
     height: 60dvh;
     padding: 2.35em;
@@ -656,7 +624,7 @@
     color: var(--bg-color);
     background: url(../images/news/fix_bg_01.jpg) no-repeat center center / cover;
 }
-.news .section .tit button {
+.news .tit button {
     font-size: var(--body-m-default);
     font-weight: 700;
     padding: 0.52em 1.05em;
@@ -664,73 +632,53 @@
     background-color: var(--primary-color);
     border-radius: 0.29em;
 }
-.news .section .tit button:hover {
+.news .tit button:hover {
     background-color: var(--hover-color);
 }
-.news .section .tit .fix_title {
+.news .tit h3 {
     margin-bottom: 1.5em;
     font-size: var(--title-XXL);
     font-weight: 700;
 
 }
-.news .section .cont_wrap {
-    flex: 1; /* 남은 영역을 모두 차지 */
-    display: flex;
-    flex-direction: column;
+.news .cont_wrap {
+    padding-left: 26.58em;
 }
-.news .section .cont_wrap .cont {
+.news .cont_wrap .cont {
     display: flex;
     flex-direction: column;
     gap: 2.82em;
 }
-.news .section .cont_wrap .cont ul {
+.news .cont_wrap .cont ul {
     display: flex;
     flex-wrap: wrap; /* 줄 바꿈 가능하도록 설정 */
     gap: 1.82em; /* 기존 gap 유지 */
     justify-content: flex-start; /* 좌측 정렬 */
     width: 100%; /* 컨테이너에 맞춰 자동 조정 */
 }
-.news .section .cont_wrap .cont ul li {
+.news .cont_wrap .cont ul li {
     flex: 1 1 calc(50% - 1.82em); /* 한 줄에 2개 배치 */
     max-width: 600px; /* 최대 크기 제한 */
     min-width: 280px; /* 최소 크기 제한 */
 }
-.news .section .cont_wrap .cont ul li a .photo {
+.news .cont_wrap .cont ul li a .photo {
     width: 100%;
     height: 200px;
     font-size: 0;
     line-height: 0;
     border: 1px solid var(--border);
     border-radius: 0.58rem;
+    overflow: hidden;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
 }
-.news .section .cont_wrap .cont ul li a .photo.a {
-    background-image: url(../images/news/news_01.jpg);
+.news .cont_wrap .cont ul li a .photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.news .section .cont_wrap .cont ul li a .photo.b {
-    background-image: url(../images/news/news_02.jpg);
-}
-.news .section .cont_wrap .cont ul li a .photo.c {
-    background-image: url(../images/news/news_03.jpg);
-}
-.news .section .cont_wrap .cont ul li a .photo.d {
-    background-image: url(../images/news/news_04.jpg);
-}
-.news .section .cont_wrap .cont ul li a .photo.e {
-    background-image: url(../images/news/news_05.jpg);
-}
-.news .section .cont_wrap .cont ul li a .photo.f {
-    background-image: url(../images/news/news_06.jpg);
-}
-.news .section .cont_wrap .cont ul li a .photo.g {
-    background-image: url(../images/news/news_07.jpg);
-}
-.news .section .cont_wrap .cont ul li a .photo.h {
-    background-image: url(../images/news/news_08.jpg);
-}
-.news .section .cont_wrap .cont ul li a .content_title {
+.news .cont_wrap .cont ul li a h3 {
     max-width: 22.35rem;
     margin: 1.1em 0 0.47em 0;
     font-size: var(--title-L);
@@ -740,7 +688,7 @@
     text-overflow: ellipsis;
     color: var(--title-color);
 }
-.news .section .cont_wrap .cont ul li a p {
+.news .cont_wrap .cont ul li a p {
     margin-bottom: 1.41em;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -749,18 +697,18 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical
 }
-.news .section .cont_wrap .cont ul li a .label_group {
+.news .cont_wrap .cont ul li a .tag_group {
     display: flex;
     gap: 0.7em;
 }
-.news .section .cont_wrap .cont ul li a .label_group label {
+.news .cont_wrap .cont ul li a .tag_group span {
     padding: 0.33em 0.66em;
     font-size: var(--sub);
     border: 1px solid var(--secondary-color);
     border-radius: 0.33rem;
     color: var(--secondary-color);
 }
-.news .section .cont_wrap .cont ul li a .label_group label.active {
+.news .cont_wrap .cont ul li a .tag_group label.active {
     background-color: var(--secondary-color);
     color: var(--bg-color);
 }
