--- a/Aerok/css/default.css
+++ b/Aerok/css/default.css
@@ -5,6 +5,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    -ms-overflow-style: none;
+    }
+::-webkit-scrollbar {
+     display: none;
+    }
 h1, h2, h3, h4, h5, h6 {
     font-weight: inherit; 
     font-size: inherit;
