--- a/Aerok/css/common.css
+++ b/Aerok/css/common.css
@@ -53,10 +53,6 @@ body, html {
 }
 
 @media screen and (max-width:1300px){
-    /* .wrapper {
-        width: auto;
-        margin: 0 120px;
-    } */
     .wrapper {
         width: auto;
         margin: 0 20px;
@@ -68,7 +64,9 @@ body, html {
     }
 }
 @media screen and (max-width:768px){
-
+    :root {
+        --body-m-default: 16px;
+    }
 }
 @media screen and (max-width:360px){
 
