--- a/Aerok/css/layout.css
+++ b/Aerok/css/layout.css
@@ -265,6 +265,10 @@ footer .wrapper .infor {
     flex-direction: column;
     gap: 0.58em;
 }
+footer .wrapper ul {
+    display: flex;
+    gap: 2em;
+}
 footer .wrapper .infor .inner {
     display: flex;
     gap: 2em;
